# mhp_review

./: README.md
docker/: Dockerfile
mhp_planner/: package.xml
mhp_planner/config/: default_controller.yaml  default_plant.yaml  default_plant_real.yaml  default_task.yaml
mhp_planner/src/controllers/: predictive_controller.cpp
mhp_planner/src/core/: global.cpp  time.cpp  time_series.cpp
mhp_planner/src/hypergraph/: optimization_problem_interface.cpp
mhp_planner/src/master/: master.cpp
mhp_planner/src/numerics/: finite_differences.cpp
mhp_planner/src/plants/: plant_interface.cpp
mhp_planner/src/solvers/: nlp_solver_ipopt.cpp  nlp_solver_ipopt_wrapper.cpp
mhp_planner/src/systems/: standard_filters.cpp  system_dynamics_interface.cpp
mhp_robot/: package.xml
mhp_robot/msg/: MsgBoundingBox.msg  MsgDistances.msg  MsgExtrapolatedAngle.msg  MsgFutureAngles.msg  MsgHuman.msg  MsgObstacle.msg  MsgObstacleList.msg  MsgPlane.msg  MsgRelativeOrientation.msg  MsgUncertaintyState.msg  MsgUtilityObject.msg
mhp_robot/scripts/: motion_prediction_spl.py  tfListener.py
mhp_robot/srv/: SrvStartSimulation.srv
mhp_robot_ur10_example/universal_robot/: package.xml
mhp_robot_ur10_example/ur10_planner/: package.xml
mhp_robot_ur10_example/ur_description/: package.xml
mhp_robot_ur10_example/ur_gazebo/: package.xml
mhp_robot_ur10_example/ur_launch/: package.xml
mhp_robot_ur10_example/ur_launch/launch/: ur10_simulation.launch
mhp_robot_ur10_example/ur_modern_driver/: package.xml
mhp_robot_ur10_example/ur_utilities/: package.xml
(+247 files in other folders)
